syntax = "proto3";
option go_package = "./pb";
package pb;

message CartNil {}

service cart {
  rpc cartCreate(CartNil) returns (CartNil);
}